added resume to website

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="#skills">skills</a>
         <a href="#work" style="margin:0px 60px;">works</a>
         <a href="#contact">contact</a>
+        <a href="./Lazaro-Resume.pdf" target="_blank">Resume</a>
     </div>
     </div>
 
@@ -28,7 +29,6 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             Welcome to my Portfolio<br>
-            <button class="btn_one"></button>
         </div>
     </div>
     </center>
