Made updates on our partnership with google for CO-MVP

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                  <div>
                     <p>I worked on Generation Global team to make a Cloud Engineer Program for all Generation districts. This program is designed to help teach new students how to use GCP and use their boost skill platform, including how to use Linux, Terraform, Ansible, and more. By the end of the program, students will be qualified Google Cloud Digital Leader & Associate Cloud Engineer.</p>
                     <p>This program had over 60+ lessons, in which I was responsible for documentation, lesson planning, instructions, material, quality of assurance, reviews, PowerSlides, Draw.Io diagrams, Lab setups, and more. </p>
-                    <p>The program's mock cohort started in the UK, which was an incredible success and will be a future model for teaching students how to interact with the cloud.</p>
+                    <p>The program's mock cohort started in the UK, which was an incredible success and will be a future model for teaching students how to interact with the cloud thanks to our partnership with google.</p>
                 </div>
                  <button onclick="window.location.href='//uk.generation.org/london/googlecloud/';" class="btn_one">Visit Project Google Cloud</button>
                  <button onclick="window.location.href='//uk.generation.org/programs/data-analytics/';" class="btn_two">Visit Project Data-Analytics</button>
