Made minor changes to badgers link behavior

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <a class="btn_social" href="https://www.linkedin.com/in/lazaroalsina/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a class="btn_social" href="https://github.com/LazaroAlsina" target="_blank"><i class="fab fa-github"></i></a>
                     <a class="btn_social" href="https://www.google.com/search?q=Lazaro Alsina jr linkedin" target="_blank"><i class="fab fa-google"></i></a>
-                    <a href="https://www.linkedin.com/groups/14062247/"><img id="badger" src="./badger.jpg" alt="spacy badger"></a>
+                    <a href="https://www.linkedin.com/groups/14062247/" target="_blank"><img id="badger" src="./badger.jpg" alt="spacy badger"></a>
                 </div>   
             </div>
         </div>
