Added more to the title of the website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     <center>
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
-            Welcome to my Portfolio!<br>
+            Welcome to my Portfolio.
+            <br>
+            Scroll down to the darkside!
+            <br>
             <button class="btn_one" onclick="window.location = 'mailto:lazaroalsina@gmail.com'">Hire me</button>
         </div>
     </div>
